--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: 刘名扬的网站
+title: 锲而不舍，金石可镂
 
 # Your name to show in the footer
 author: Liu Ming-Yang
