--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ post_search: true
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#EAEAEA"
-navbar-text-col: "#777777"
+navbar-text-col: "#F8F8FF"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
