--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ author: Liu Ming-Yang
 
 navbar-links:
   About Me: "aboutme"
-  Publications: "asset/publications.md"
-  Projects: "asset/projects.html"
+  Publications: "assets/publications.md"
+  Projects: "assets/projects.html"
   Blogs: "blog"
 #   Resources:
 #     - Beautiful Jekyll: "https://beautifuljekyll.com"
