--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author: Liu Ming-Yang
 
 navbar-links:
   About Me: "aboutme"
-  Publications: "publications"
+  Publications: "assets/publications"
   Projects: "assets/projects"
   Blogs: "blog"
 #   Resources:
