--- a/_config.yml
+++ b/_config.yml
@@ -123,14 +123,14 @@ footer-hover-col: "#0085A1"
 
 navbar-img: "/assets/img/bgimage2.png"
 footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/020.png"
+page-img: "/assets/img/page.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-site-css:
- - "/assets/css/statics.css"
+# site-css:
+#  - "/assets/css/statics.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
 #site-js:
